--- a/index.html
+++ b/index.html
@@ -1140,23 +1140,23 @@ header{
   }
 }
 
-  /* ===== CV CONTENT ENTRANCE (BOTTOM) ===== */
+/* ===== CV CONTENT ENTRANCE (BOTTOM · MÁS TARDE) ===== */
 
 .cv-entry{
   opacity: 0;
-  transform: translateY(32px);
-  animation: cvEntryUp 0.8s cubic-bezier(.22,.61,.36,1) forwards;
+  transform: translateY(36px);
+  animation: cvEntryUp 0.9s cubic-bezier(.22,.61,.36,1) forwards;
 }
 
-/* FORMACION */
-.cv-group:nth-of-type(1) .cv-entry:nth-of-type(1){ animation-delay: .45s; }
-.cv-group:nth-of-type(1) .cv-entry:nth-of-type(2){ animation-delay: .6s; }
-.cv-group:nth-of-type(1) .cv-entry:nth-of-type(3){ animation-delay: .75s; }
-.cv-group:nth-of-type(1) .cv-entry:nth-of-type(4){ animation-delay: .9s; }
+/* FORMACIÓN — espera clara tras el título */
+.cv-group:nth-of-type(1) .cv-entry:nth-of-type(1){ animation-delay: 1.3s; }
+.cv-group:nth-of-type(1) .cv-entry:nth-of-type(2){ animation-delay: 1.5s; }
+.cv-group:nth-of-type(1) .cv-entry:nth-of-type(3){ animation-delay: 1.7s; }
+.cv-group:nth-of-type(1) .cv-entry:nth-of-type(4){ animation-delay: 1.9s; }
 
-/* EXPERIENCIA */
-.cv-group:nth-of-type(2) .cv-entry:nth-of-type(1){ animation-delay: .7s; }
-.cv-group:nth-of-type(2) .cv-entry:nth-of-type(2){ animation-delay: .85s; }
+/* EXPERIENCIA — todavía un poco más tarde */
+.cv-group:nth-of-type(2) .cv-entry:nth-of-type(1){ animation-delay: 1.8s; }
+.cv-group:nth-of-type(2) .cv-entry:nth-of-type(2){ animation-delay: 2.0s; }
 
 @keyframes cvEntryUp{
   to{
@@ -1164,6 +1164,7 @@ header{
     transform: translateY(0);
   }
 }
+
 
 
 </style>
