--- a/index.html
+++ b/index.html
@@ -1263,99 +1263,55 @@ header{
   </div>
 </section>
 
-<section id="cv" class="section">
-  <div class="content cv-editorial">
+<div class="cv-group">
 
-    <h2 class="fade-up">Currículum Vitae</h2>
-
-    <!-- ================= FORMACIÓN ================= -->
-    <div class="cv-group">
-
-      <div class="cv-group-header">
-        <h3 class="cv-group-title">Formación académica</h3>
-        <span class="cv-divider"></span>
-      </div>
-
-      <article class="cv-entry">
-        <span class="cv-date">2018 · 2020</span>
-        <div class="cv-text">
-          <h4>Grado Medio en Electricidad</h4>
-          <p>
-            Formación técnica orientada a instalaciones eléctricas,
-            sistemas básicos y trabajo en entorno real.
-          </p>
-        </div>
-      </article>
-
-      <article class="cv-entry">
-        <span class="cv-date">2020 · 2022</span>
-        <div class="cv-text">
-          <h4>Grado Superior en Electricidad</h4>
-          <p>
-            Profundización técnica, interpretación de planos,
-            ejecución de proyectos y criterio constructivo.
-          </p>
-        </div>
-      </article>
-
-      <article class="cv-entry">
-        <span class="cv-date">2022 · Actualidad</span>
-        <div class="cv-text">
-          <h4>Ingeniería en Diseño Industrial · UPV</h4>
-          <p>
-            Desarrollo de producto, diseño técnico,
-            procesos de fabricación y enfoque funcional.
-          </p>
-        </div>
-      </article>
-
-      <article class="cv-entry">
-        <span class="cv-date">En curso</span>
-        <div class="cv-text">
-          <h4>Diseño Industrial · UJI</h4>
-          <p>
-            Formación complementaria en diseño,
-            metodología proyectual y pensamiento crítico.
-          </p>
-        </div>
-      </article>
-
-    </div>
-
-    <!-- ============== EXPERIENCIA LABORAL ============== -->
-    <div class="cv-group">
-
-      <div class="cv-group-header">
-        <h3 class="cv-group-title">Experiencia laboral</h3>
-        <span class="cv-divider"></span>
-      </div>
-
-      <article class="cv-entry">
-        <span class="cv-date">Prácticas</span>
-        <div class="cv-text">
-          <h4>Autrial</h4>
-          <p>
-            Prácticas en entorno industrial,
-            apoyo técnico en instalaciones y procesos eléctricos.
-          </p>
-        </div>
-      </article>
-
-      <article class="cv-entry">
-        <span class="cv-date">Prácticas</span>
-        <div class="cv-text">
-          <h4>Elecnor</h4>
-          <p>
-            Participación en proyectos eléctricos reales,
-            contacto con obra, normativa y ejecución técnica.
-          </p>
-        </div>
-      </article>
-
-    </div>
-
+  <div class="cv-group-header">
+    <h3 class="cv-group-title">Formación</h3>
+    <span class="cv-divider"></span>
   </div>
-</section>
+
+  <article class="cv-entry">
+    <span class="cv-date">09/2024 · En curso</span>
+    <div class="cv-text">
+      <h4>Ingeniería en Diseño Industrial y Desarrollo de Productos</h4>
+      <p>
+        Universidad Politécnica de Valencia (UPV) · Valencia
+      </p>
+    </div>
+  </article>
+
+  <article class="cv-entry">
+    <span class="cv-date">09/2021 · 07/2024</span>
+    <div class="cv-text">
+      <h4>Ingeniería en Diseño Industrial y Desarrollo de Productos</h4>
+      <p>
+        Universidad Jaume I de Castellón (UJI) · Castellón
+      </p>
+    </div>
+  </article>
+
+  <article class="cv-entry">
+    <span class="cv-date">09/2019 · 07/2021</span>
+    <div class="cv-text">
+      <h4>Grado Superior en Instalaciones Electrotécnicas y Automatizadas</h4>
+      <p>
+        Escuelas San José de Valencia · Valencia
+      </p>
+    </div>
+  </article>
+
+  <article class="cv-entry">
+    <span class="cv-date">09/2017 · 07/2019</span>
+    <div class="cv-text">
+      <h4>Grado Medio en Instalaciones Eléctricas y Automáticas</h4>
+      <p>
+        Escuelas San José de Valencia · Valencia
+      </p>
+    </div>
+  </article>
+
+</div>
+
 
 
 
