--- a/index.html
+++ b/index.html
@@ -1263,55 +1263,89 @@ header{
   </div>
 </section>
 
-<div class="cv-group">
 
-  <div class="cv-group-header">
-    <h3 class="cv-group-title">Formación</h3>
-    <span class="cv-divider"></span>
+<!-- ===== CV SECTION ===== -->
+<section id="cv" class="section">
+  <div class="content cv-editorial">
+
+    <h2 class="fade-up">Currículum Vitae</h2>
+
+    <!-- ================= FORMACIÓN ================= -->
+    <div class="cv-group">
+
+      <div class="cv-group-header">
+        <h3 class="cv-group-title">Formación</h3>
+        <span class="cv-divider"></span>
+      </div>
+
+      <article class="cv-entry">
+        <span class="cv-date">09/2024 · En curso</span>
+        <div class="cv-text">
+          <h4>Ingeniería en Diseño Industrial y Desarrollo de Productos</h4>
+          <p>Universidad Politécnica de Valencia (UPV) · Valencia</p>
+        </div>
+      </article>
+
+      <article class="cv-entry">
+        <span class="cv-date">09/2021 · 07/2024</span>
+        <div class="cv-text">
+          <h4>Ingeniería en Diseño Industrial y Desarrollo de Productos</h4>
+          <p>Universidad Jaume I de Castellón (UJI) · Castellón</p>
+        </div>
+      </article>
+
+      <article class="cv-entry">
+        <span class="cv-date">09/2019 · 07/2021</span>
+        <div class="cv-text">
+          <h4>Grado Superior en Instalaciones Electrotécnicas y Automatizadas</h4>
+          <p>Escuelas San José de Valencia · Valencia</p>
+        </div>
+      </article>
+
+      <article class="cv-entry">
+        <span class="cv-date">09/2017 · 07/2019</span>
+        <div class="cv-text">
+          <h4>Grado Medio en Instalaciones Eléctricas y Automáticas</h4>
+          <p>Escuelas San José de Valencia · Valencia</p>
+        </div>
+      </article>
+
+    </div>
+
+    <!-- ================= EXPERIENCIA ================= -->
+    <div class="cv-group">
+
+      <div class="cv-group-header">
+        <h3 class="cv-group-title">Experiencia laboral</h3>
+        <span class="cv-divider"></span>
+      </div>
+
+      <article class="cv-entry">
+        <span class="cv-date">2024</span>
+        <div class="cv-text">
+          <h4>Prácticas en AUTRIAL</h4>
+          <p>
+            Apoyo técnico en instalaciones eléctricas y procesos industriales,
+            interpretación de planos y trabajo en entorno real de obra.
+          </p>
+        </div>
+      </article>
+
+      <article class="cv-entry">
+        <span class="cv-date">2023</span>
+        <div class="cv-text">
+          <h4>Prácticas en ELECNOR</h4>
+          <p>
+            Colaboración en proyectos eléctricos, mantenimiento de instalaciones
+            y soporte técnico en campo.
+          </p>
+        </div>
+      </article>
+
+    </div>
+
   </div>
-
-  <article class="cv-entry">
-    <span class="cv-date">09/2024 · En curso</span>
-    <div class="cv-text">
-      <h4>Ingeniería en Diseño Industrial y Desarrollo de Productos</h4>
-      <p>
-        Universidad Politécnica de Valencia (UPV) · Valencia
-      </p>
-    </div>
-  </article>
-
-  <article class="cv-entry">
-    <span class="cv-date">09/2021 · 07/2024</span>
-    <div class="cv-text">
-      <h4>Ingeniería en Diseño Industrial y Desarrollo de Productos</h4>
-      <p>
-        Universidad Jaume I de Castellón (UJI) · Castellón
-      </p>
-    </div>
-  </article>
-
-  <article class="cv-entry">
-    <span class="cv-date">09/2019 · 07/2021</span>
-    <div class="cv-text">
-      <h4>Grado Superior en Instalaciones Electrotécnicas y Automatizadas</h4>
-      <p>
-        Escuelas San José de Valencia · Valencia
-      </p>
-    </div>
-  </article>
-
-  <article class="cv-entry">
-    <span class="cv-date">09/2017 · 07/2019</span>
-    <div class="cv-text">
-      <h4>Grado Medio en Instalaciones Eléctricas y Automáticas</h4>
-      <p>
-        Escuelas San José de Valencia · Valencia
-      </p>
-    </div>
-  </article>
-
-</div>
-
+</section>
 
 
 
