--- a/index.html
+++ b/index.html
@@ -1279,7 +1279,7 @@ header{
       </div>
 
       <article class="cv-entry">
-        <span class="cv-date">09/2024 · En curso</span>
+        <span class="cv-date">2024 · En curso</span>
         <div class="cv-text">
           <h4>Ingeniería en Diseño Industrial y Desarrollo de Productos</h4>
           <p>Universidad Politécnica de Valencia (UPV) · Valencia</p>
@@ -1287,7 +1287,7 @@ header{
       </article>
 
       <article class="cv-entry">
-        <span class="cv-date">09/2021 · 07/2024</span>
+        <span class="cv-date">2021 · 2024</span>
         <div class="cv-text">
           <h4>Ingeniería en Diseño Industrial y Desarrollo de Productos</h4>
           <p>Universidad Jaume I de Castellón (UJI) · Castellón</p>
@@ -1295,7 +1295,7 @@ header{
       </article>
 
       <article class="cv-entry">
-        <span class="cv-date">09/2019 · 07/2021</span>
+        <span class="cv-date">2019 · 2021</span>
         <div class="cv-text">
           <h4>Grado Superior en Instalaciones Electrotécnicas y Automatizadas</h4>
           <p>Escuelas San José de Valencia · Valencia</p>
@@ -1303,7 +1303,7 @@ header{
       </article>
 
       <article class="cv-entry">
-        <span class="cv-date">09/2017 · 07/2019</span>
+        <span class="cv-date">2017 · 2019</span>
         <div class="cv-text">
           <h4>Grado Medio en Instalaciones Eléctricas y Automáticas</h4>
           <p>Escuelas San José de Valencia · Valencia</p>
@@ -1312,39 +1312,40 @@ header{
 
     </div>
 
-    <!-- ================= EXPERIENCIA ================= -->
-    <div class="cv-group">
+   <!-- ================= EXPERIENCIA ================= -->
+<div class="cv-group">
 
-      <div class="cv-group-header">
-        <h3 class="cv-group-title">Experiencia laboral</h3>
-        <span class="cv-divider"></span>
-      </div>
-
-      <article class="cv-entry">
-        <span class="cv-date">2024</span>
-        <div class="cv-text">
-          <h4>Prácticas en AUTRIAL</h4>
-          <p>
-            Apoyo técnico en instalaciones eléctricas y procesos industriales,
-            interpretación de planos y trabajo en entorno real de obra.
-          </p>
-        </div>
-      </article>
-
-      <article class="cv-entry">
-        <span class="cv-date">2023</span>
-        <div class="cv-text">
-          <h4>Prácticas en ELECNOR</h4>
-          <p>
-            Colaboración en proyectos eléctricos, mantenimiento de instalaciones
-            y soporte técnico en campo.
-          </p>
-        </div>
-      </article>
-
-    </div>
-
+  <div class="cv-group-header">
+    <h3 class="cv-group-title">Experiencia laboral</h3>
+    <span class="cv-divider"></span>
   </div>
+
+  <article class="cv-entry">
+    <span class="cv-date">2017 (3 meses)</span>
+    <div class="cv-text">
+      <h4>Montador de cuadros eléctricos · Prácticas</h4>
+      <p>
+        Autrial · Valencia, Comunidad Valenciana<br>
+        Mantenimiento preventivo y correctivo de cuadros eléctricos
+        e instalaciones en entorno industrial.
+      </p>
+    </div>
+  </article>
+
+  <article class="cv-entry">
+    <span class="cv-date">2021 (3 meses)</span>
+    <div class="cv-text">
+      <h4>Mantenimiento de equipos eléctricos · Prácticas</h4>
+      <p>
+        Elecnor · Valencia, Comunidad Valenciana<br>
+        Prácticas de mantenimiento de instalaciones eléctricas
+        a través de un grado superior.
+      </p>
+    </div>
+  </article>
+
+</div>
+
 </section>
 
 
