--- a/index.html
+++ b/index.html
@@ -1326,7 +1326,7 @@ header{
       <h4>Montador de cuadros eléctricos · Prácticas</h4>
       <p>
         Autrial · Valencia, Comunidad Valenciana<br>
-        Mantenimiento preventivo y correctivo de cuadros eléctricos
+        Mantenimiento preventivo de cuadros eléctricos
         e instalaciones en entorno industrial.
       </p>
     </div>
