--- a/index.html
+++ b/index.html
@@ -1145,18 +1145,18 @@ header{
 .cv-entry{
   opacity: 0;
   transform: translateY(32px);
-  animation: cvEntryUp 0.85s cubic-bezier(.22,.61,.36,1) forwards;
+  animation: cvEntryUp 0.75s cubic-bezier(.22,.61,.36,1) forwards;
 }
 
-/* FORMACIÓN — pausa elegante */
-.cv-group:nth-of-type(1) .cv-entry:nth-of-type(1){ animation-delay: 1.05s; }
-.cv-group:nth-of-type(1) .cv-entry:nth-of-type(2){ animation-delay: 1.20s; }
-.cv-group:nth-of-type(1) .cv-entry:nth-of-type(3){ animation-delay: 1.35s; }
-.cv-group:nth-of-type(1) .cv-entry:nth-of-type(4){ animation-delay: 1.50s; }
+/* FORMACIÓN — más ágil */
+.cv-group:nth-of-type(1) .cv-entry:nth-of-type(1){ animation-delay: .65s; }
+.cv-group:nth-of-type(1) .cv-entry:nth-of-type(2){ animation-delay: .78s; }
+.cv-group:nth-of-type(1) .cv-entry:nth-of-type(3){ animation-delay: .91s; }
+.cv-group:nth-of-type(1) .cv-entry:nth-of-type(4){ animation-delay: 1.04s; }
 
-/* EXPERIENCIA — entra después pero sin hacerse larga */
-.cv-group:nth-of-type(2) .cv-entry:nth-of-type(1){ animation-delay: 1.35s; }
-.cv-group:nth-of-type(2) .cv-entry:nth-of-type(2){ animation-delay: 1.50s; }
+/* EXPERIENCIA — entra justo después */
+.cv-group:nth-of-type(2) .cv-entry:nth-of-type(1){ animation-delay: .95s; }
+.cv-group:nth-of-type(2) .cv-entry:nth-of-type(2){ animation-delay: 1.08s; }
 
 @keyframes cvEntryUp{
   to{
