--- a/index.html
+++ b/index.html
@@ -1614,7 +1614,10 @@ function changeSection(id, link) {
   const logo = document.getElementById('logo-home');
   logo.style.visibility = id === 'home' ? 'visible' : 'hidden';
 
-  
+  }
+
+  const snapItems = document.querySelectorAll('.cv-snap-item');
+
 
 
 
