--- a/index.html
+++ b/index.html
@@ -1234,6 +1234,11 @@ header{
   opacity: .85;
 }
 
+/* Ocultar footer global cuando CV está activa */
+#cv.active ~ footer:not(.cv-footer){
+  display: none;
+}
+
   
 </style>
 </head>
